--- a/src/pocketmine/lang/Installer/tr_TR.ini
+++ b/src/pocketmine/lang/Installer/tr_TR.ini
@@ -1,4 +1,4 @@
-language_has_been_selected = İngilizce başarıyla seçildi.
+language_has_been_selected = Türkçe başarıyla seçildi.
 skip_installer = Kurulum yazılımını atlamak istiyormusunuz?
 
 welcome_to_pocketmine = PocketMine-MP dünyasına hoşgeldin.\nYeni sunucunu ayarlamaya başlamadan önce lisans sözleşmesini kabul etmelisin.\nPocketMine-MP LGPL Linsansı altında lisanslıdır,\nBu klasörden LİSANS dosyasını açıp okuyabilirsin.
